--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>JCJCJCJCJCJC</title>
-  </head>
-  <body>
-    <h1>What's GOOOOOODDDDDDD!JC</h1>
-  </body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/appstyle.css">
+        <!-- can use style element tag to style as well as css doc-->
+        <title>site of Me</title>
+        
+    </head>
+ 
+    <body>
+        <div id="main">
+            <article>
+                <img id = "image-main" src="https://Jonathanchuang.github.io/pictures/cover pic.jpg
+            " alt="https://www.linkedin.com/in/tzu-yi-chuang-282jc123/">
+            </article>
+            
+            <nav class = "font">
+                <h1 class="header">Jonathan Chuang</h1>
+                <a href="html/about.html">About Me</br></a>
+                <a href="html/cv.html">CV</br></a>
+                <a href="https://Jonathanchuang.github.io/animation(p5)/animation.html">p5.js</br></a>
+                </br>
+                </br> 
+            </nav>
+        </div>
+    </body>
 </html>
-$ git add index.html
 
-$ git commit -m "add index"
-[master (root-commit) 80450b2] add index
- 1 file changed, 10 insertions(+)
- create mode 100644 index.html
- $ git remote add origin https://github.com/eddiekao/eddiekao.github.io.git
 
-$ git push -u origin master
-Counting objects: 3, done.
-Delta compression using up to 4 threads.
-Compressing objects: 100% (2/2), done.
-Writing objects: 100% (3/3), 327 bytes | 327.00 KiB/s, done.
-Total 3 (delta 0), reused 0 (delta 0)
-To https://github.com/eddiekao/eddiekao.github.io.git
- * [new branch]      master -> master
-Branch master set up to track remote branch master from origin.
